[gd_scene load_steps=5 format=2]

[ext_resource path="res://WorldDouble.gd" type="Script" id=1]
[ext_resource path="res://fonts/arialbd.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 2 )

[node name="WorldDouble" type="Node2D"]
script = ExtResource( 1 )

[node name="RoundLabel" type="Label" parent="."]
margin_left = 211.0
margin_right = 308.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Round: #0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepLabel" type="Label" parent="."]
margin_left = 211.0
margin_top = 24.0
margin_right = 308.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Steps: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardLabel" type="Label" parent="."]
visible = false
margin_left = 211.0
margin_top = 54.0
margin_right = 307.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Reward: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
visible = false
margin_left = 211.0
margin_top = 81.0
margin_right = 307.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarRotLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "BarR: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarRotVelLabel" type="Label" parent="."]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "BarRV: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CartXLabel" type="Label" parent="."]
margin_top = 51.0
margin_right = 99.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "CartX: 320"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CartVLabel" type="Label" parent="."]
margin_top = 75.0
margin_right = 94.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "CartV: 0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
margin_left = 565.0
margin_right = 639.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="100RoundButton" type="Button" parent="."]
margin_left = 537.0
margin_top = 27.0
margin_right = 641.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "100 Round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1000RoundButton" type="Button" parent="."]
margin_left = 525.0
margin_top = 54.0
margin_right = 639.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "1000 Round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10000RoundButton" type="Button" parent="."]
margin_left = 514.0
margin_top = 81.0
margin_right = 638.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 2 )
text = "10000 Round"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="100RoundButton" to="." method="_on_100RoundButton_pressed"]
[connection signal="pressed" from="1000RoundButton" to="." method="_on_1000RoundButton_pressed"]
[connection signal="pressed" from="10000RoundButton" to="." method="_on_10000RoundButton_pressed"]
